@@ -27,7 +27,7 @@ from homeassistant.helpers import config_validation as cv
 from pyaarlo.constant import DEFAULT_AUTH_HOST, DEFAULT_HOST, SIREN_STATE_KEY
 from requests.exceptions import ConnectTimeout, HTTPError
 
-__version__ = "0.8.0a2"
+__version__ = "0.8.0a3"
 
 _LOGGER = logging.getLogger(__name__)
 
